--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
-    <script src="rps.js"></script>
+    <script src="rps.js" defer></script>
 </head>
 <body>
-    
+    <button type="button" class="rock">Rock</button>
+    <button type="button" class="paper">Paper</button>
+    <button type="button" class="scissors">Scissors</button>
 </body>
 </html>
