--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <button type="button" class="rock">Rock</button>
     <button type="button" class="paper">Paper</button>
     <button type="button" class="scissors">Scissors</button>
+    <div class="results">Results:</div>
 </body>
 </html>
