--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="rps.js" defer></script>
 </head>
 <body>
+    <p class="numberRounds"></p>
     <button type="button" class="rock">Rock</button>
     <button type="button" class="paper">Paper</button>
     <button type="button" class="scissors">Scissors</button>
