--- a/index.html
+++ b/index.html
@@ -5,6 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="rps.js" defer></script>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        * {
+            gap: 15px;
+            font-size: 20px;
+        }
+
+        .finalPara {
+            color: red;
+            font-size: 40px;
+        }
+    </style>
 </head>
 <body>
     <p class="numberRounds"></p>
